@@ -23,7 +23,6 @@ from gettext import gettext as _
 
 from ..utils.sqldb import SqliteDB
 from ..utils.iconimage import LocalIconImage
-from ..utils.config import GConf
 from ..utils.checkinstalled import check_installed_in_path
 from base import *
 from fspot.__init__ import *
@@ -129,7 +128,7 @@ class PhotoSourceShotwellUI(ui.PhotoSourceUI):
     def make(self):
         super(PhotoSourceShotwellUI, self).make()
         self._set_target_sensitive(_("_Tag:"), True)
-        state = GConf().get_bool('plugins/shotwell/use_description', False)
+        state = self.conf.get_bool('plugins/shotwell/use_description', False)
         self._set_argument_sensitive(label=_('_Description:'), state=state)
 
     def get_options(self):
