@@ -38,7 +38,7 @@ class UrlGetWithProxy(object):
         if proxy is None:
             proxy = os.environ.get('http_proxy') or ""
         self.proxy_host, self.proxy_port = client._parse(proxy)[1:3]
-        self.use_proxy = True if self.proxy_host and self.proxy_port else False
+        self.use_proxy = bool(self.proxy_host and self.proxy_port)
 
     def getPage(self, url, contextFactory=None, *args, **kwargs):
         factory = client.HTTPClientFactory(url, *args, **kwargs)
