@@ -4,6 +4,8 @@
 <head>
   <title>$title</title>
   <link rel="stylesheet" href="$stylesheet">
+  <link rel="icon" type="image/png" 
+        href="/usr/share/icons/hicolor/16x16/apps/gphotoframe.png">
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 $javascript
 </head>
